--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "cra-template": "1.0.3",
+    "markdown-to-jsx": "^6.11.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
-	"predeploy": "npm run build",
-	"deploy": "gh-pages -d build -b master -r https://github.com/balkonbewaesserung/balkonbewaesserung.github.io.git",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -b master -r https://github.com/balkonbewaesserung/balkonbewaesserung.github.io.git",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
